Bug 938316. Work around fractional texture resampling issues by switching to NEAREST sampling when we're doing a pixel-aligned compositing operation. r=jrmuizel